codes/lox_8_4.bnf
// このファイルに指示されたBNFを記述する
program ::= statement*

statement ::= exprStmt
           | printStmt
           | varStmt

exprStmt ::= expression ";"

printStmt ::= "print" expression ";"

varStmt ::= "var" identifier ( "=" expression )? ";"

expression ::= assignment

assignment ::= identifier "=" assignment
            | equality

equality ::= comparison ( ( "!=" | "==" ) comparison )*

comparison ::= term ( ( ">" | ">=" | "<" | "<=" ) term )*

term ::= factor ( ( "+" | "-" ) factor )*

factor ::= unary ( ( "*" | "/" ) unary )*

unary ::= ( "!" | "-" ) unary
        | primary

primary ::= NUMBER
          | STRING
          | "true"
          | "false"
          | "nil"
          | identifier
          | "(" expression ")"

identifier ::= letter ( letter | digit )*

NUMBER ::= digit+

STRING ::= "\"" character* "\""

letter ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i"
         | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r"
         | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z"
         | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I"
         | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R"
         | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"
         | "_"

digit ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

character ::= letter | digit | " "
